updatew sdtyle.css

--- a/CSS_Mini_Project/styles.css
+++ b/CSS_Mini_Project/styles.css
@@ -2,7 +2,7 @@
 /* ----------- Main Header ----------- */
 body{
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Press Start 2P', cursive;
 }
 
 .main-header{
